--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Tagop</string>
+
+    //MainSearchActivity
+    <string name="toolbar_search_title">Szukaj</string>
+    <string name="toolbar_search_for_tags">Szukaj znaczników #</string>
+    <string name="toolbar_action_close">Anuluj</string>
+    <string name="toolbar_action_clear_history">Czyść historię</string>
+    <string name="symbol_hashtag">#</string>
+
+    //layout placeholders
+    <string name="lorem_2words">lorem ipsum</string>
+
 </resources>
