--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,12 @@
     //PostActivity
     <string name="post_counters_votes_param">&#160;%1$d</string>
     <string name="post_counters_comments_param">Komentarze: %1$d</string>
+    <string name="post_comments_title">Komentarze</string>
+    <string name="post_comments_info_separator">&#183;</string>
 
     //layout placeholders
     <string name="lorem_2words">lorem ipsum</string>
     <string name="lorem_2lines">lorem ipsumlorem ipsumlorem ipsum lorem ipsumlorem </string>
     <string name="lorem_2sentences">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos</string>
+    <string name="lorem_digit">13</string>
 </resources>
