--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,29 @@
 <resources>
     <string name="app_name">Tagop</string>
 
-    //Activities
-    <string name="title_activity_posts">Posty</string>
-    //MainSearchActivity
+    <!--search history screen-->
     <string name="toolbar_search_title">Szukaj</string>
     <string name="toolbar_search_for_tags">Szukaj znaczników #</string>
     <string name="toolbar_action_close">Anuluj</string>
     <string name="toolbar_action_clear_history">Czyść historię</string>
     <string name="symbol_hashtag">#</string>
     <string name="empty_state_history">Historia wyszukiwania jest pusta.</string>
-    //PostActivity
+    <!--end of search history screen-->
+
+    <!--search results screen-->
+    <string name="title_activity_posts">Posty</string>
     <string name="post_counters_votes_param">&#160;%1$d</string>
     <string name="post_counters_comments_param">Komentarze: %1$d</string>
     <string name="post_comments_title">Komentarze</string>
     <string name="post_comments_info_separator">&#183;</string>
+    <string name="post_more_open_in_browser">Otwórz w przeglądarce</string>
+    <string name="post_more_copy_link">Kopiuj link</string>
+    <string name="toast_copy_link_success">Skopiowano url %1$s</string>
+    <!--end of search results screen-->
 
     //layout placeholders
     <string name="lorem_2words">lorem ipsum</string>
-    <string name="lorem_2lines">lorem ipsumlorem ipsumlorem ipsum lorem ipsumlorem </string>
+    <string name="lorem_2lines">lorem ipsum lorem ipsu mlorem ipsum lorem ipsumlorem </string>
     <string name="lorem_2sentences">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos</string>
     <string name="lorem_digit">13</string>
 </resources>
