--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="toolbar_action_close">Anuluj</string>
     <string name="toolbar_action_clear_history">Czyść historię</string>
     <string name="symbol_hashtag">#</string>
-    <string name="empty_state_history">Historia wyszukiwania jest pusta.</string>
+    <string name="empty_state_history_title">Pusta historia</string>
+    <string name="empty_state_history_instruction">Naciśnij \'Szukaj\' by rozpocząć</string>
     <!--end of search history screen-->
 
     <!--search results screen-->
@@ -19,7 +20,13 @@
     <string name="post_more_open_in_browser">Otwórz w przeglądarce</string>
     <string name="post_more_copy_link">Kopiuj link</string>
     <string name="toast_copy_link_success">Skopiowano url %1$s</string>
+    <string name="empty_state_results_title">Nic nie znaleziono</string>
+    <string name="empty_state_results_instruction">Spróbuj wyszukać inny tag</string>
     <!--end of search results screen-->
+
+    <!--shared-->
+    <string name="error_state_general_title">Oops, błąd</string>
+    <string name="error_state_general_instruction">Spróbuj jeszcze raz</string>
 
     //layout placeholders
     <string name="lorem_2words">lorem ipsum</string>
